Version 22

--Fixed closed doors blocking visibility of an animal that starts there (after
  either being drugged or killed).  Now animal presense under a door causes a
  door to be open from the start.

--Lights and sticking switches are now breakable with a crowbar.




Version 21  2013-October-22

--Fixed inconsistency in family movement trigger when house view shifts as
  robber nears edge of screen (thanks Zed).

--Fixed name trimming overhang glitch given new name spacing (due to bounty
  icon in v19).





Version 20   Live Server Fixes

--Added a get_price_list server public API call (thanks Ukuko).




Version 20   2013-October-18

--Fixed bug that allowed wife to shoot robber while robber is on welcome mat,
  allowing robber to strangely recover from death by leaving the house (thanks 
  Colorfusion).

--Fixed tape playback page title text when tape value represents a bounty
  earned.

--Sleeping animals no longer jump back (mysteriously, while sleeping) to their
  original location after a successful robbery.

--Improved visibility of sleeping animals by bringing them up above wall
  shadows and giving them dark outlines just like other living mobiles.

--Returned to v15-style animal movement (animals start following/fleeing when
  they see you, but continue moving toward/away from you even after you move
  out of view).

--Added a panic button that can be pressed by family as they run out.

--Moved shotgun up slightly to make it more visible when surrounded by walls.

--Changed so that murder bounty is based on total number of people killed
  instead of just counting each murderous outing.





Version 19   Live Server Fixes

--Wired wooden walls brought back to the game.

--Added a price tweak factors on server so that overall tile/tool price ratios
  can be adjusted more easily.  Started off with tile prices tweaked down to
  2/5 what they used to be (to allow more house building with the starting
  budget).




Version 19   2013-October-15
